<resources>
    <string name="app_name">Bus Artery Passenger</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_home_page">Home</string>
    <string name="nav_passenger_profile">Profile</string>
    <string name="travelHistory">Travel History</string>
    <string name="log_out">Log out</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="origin">You are Here</string>
    <string name="destination">Where are you going?</string>
    <string name="letsFindYouATrip">Let\'s Find You a Trip!</string>
    <string name="bookTrip">Book Trip</string>
    <string name="numberOfSeats">Seats needed</string>
    <string name="ordinary">Ordinary</string>
    <string name="Aircon">Aircon</string>
    <string name="Accommodation">Accommodation</string>
    <string name="direction">Direction</string>
    <string name="south">South</string>
    <string name="north">North</string>
    <string name="place_data">%1$s</string>
    <string name="title_estimated_fare">Estimated Fare:</string>
    <string name="title_estimated_time">Estimated Time of Travel:</string>
    <string name="title_estimated_distance">Estimated Distance:</string>
    <string name="value_est_fare">50.00</string>
    <string name="value_est_time">45 mins</string>
    <string name="value_est_distance">2 km</string>
    <string name="username">Username (example@gmail.com)</string>
    <string name="password">Password</string>
    <string name="logIn">Log in</string>
    <string name="noAccount">No Account Yet? Register Here!</string>
    <string name="loginImageButtonDesc">user login icon</string>
    <string name="name">Full Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="type">Type</string>
    <string name="regular">Regular</string>
    <string name="student">Student</string>
    <string name="senior">Senior Citizen</string>
    <string name="pwd">PWD</string>
    <string name="checkboxGenerateNfc">Generate NFC Number</string>
    <string name="register">Register</string>
    <string name="alreadyAMember">Already a Member?</string>
    <string name="regImageButtonDesc">user registration icon</string>
</resources>
