<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80sp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputLayout_edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/edtAge"
                        android:layout_alignRight="@+id/edtAge"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputLayout_edtAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/edtName"
                        android:ems="10"
                        android:hint="@string/age"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/txtGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginStart="80dp"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginStart="80dp"
                        android:checked="false"
                        android:text="@string/female" />

                </RadioGroup>

                <TextView
                    android:id="@+id/txtType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rgType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginStart="80dp"
                        android:checked="true"
                        android:text="@string/regular" />

                    <RadioButton
                        android:id="@+id/rbStudent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginStart="80dp"
                        android:checked="false"
                        android:text="@string/student" />

                    <RadioButton
                        android:id="@+id/rbSenior"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginStart="80dp"
                        android:checked="false"
                        android:text="@string/senior" />

                    <RadioButton
                        android:id="@+id/rbPwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginStart="80dp"
                        android:checked="false"
                        android:text="@string/pwd" />
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputLayout_edtUsernameReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/edtAge"
                        android:layout_alignRight="@+id/edtAge"
                        android:layout_below="@+id/rgType"
                        android:ems="10"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputLayout_edtPasswordReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/edtUsername"
                        android:layout_alignRight="@+id/edtUsername"
                        android:layout_below="@+id/edtUsername"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/checkboxGenerate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkboxGenerateNfc" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:theme="@style/MyButton" />

                <Button
                    android:id="@+id/btnLogInRedirect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/alreadyAMember"
                    android:textColor="@color/darkestBlue" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/regImageButtonDesc"
        android:layout_marginTop="23sp"
        android:background="@drawable/user_profile_image_background"
        android:src="@drawable/form" />
</RelativeLayout>
