<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
        android:id="@+id/logInRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="60sp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputLayout_edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtUsernameLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/user"
                    android:drawableLeft="@drawable/user"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputLayout_edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPasswordLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/lock"
                    android:drawableLeft="@drawable/lock"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:theme="@style/MyButton"
                android:text="@string/logIn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnRegisterRedirect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/darkestBlue"
                android:text="@string/noAccount"/>
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:contentDescription="@string/loginImageButtonDesc"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:background="@drawable/user_profile_image_background"
        android:src="@mipmap/bus" />
</RelativeLayout>